--- a/main/views/post.handlebars
+++ b/main/views/post.handlebars
@@ -2,17 +2,19 @@
   {{#each posts as |post|}}
   <div class='card'>
     <div>
-        <h3>{{post.post_name}}, {{post.user.username}}{{post.current_date}}</h3>
+        <h3 id="post-name">{{post.post_name}}, {{post.user.username}}{{post.current_date}}</h3>
     </div>
     <div>
-        <p>{{post.post_content}}</p>
+        <p id="post-content">{{post.post_content}}</p>
     </div>
   </div>
-  <div> 
+  <div class="delete"> 
      <button type="submit" class="btn btn-primary">Update</button>
   </div>
-  <div>
+  <div class="update">
      <button type="submit" class="btn btn-primary">Delete</button>
   </div>
   {{/each}}
 </div>
+
+<script src="./js/post.js"></script>
