--- a/main/views/homepage.handlebars
+++ b/main/views/homepage.handlebars
@@ -6,11 +6,13 @@
 
 {{#each posts as |post|}}
 <div class='card'>
-    <div>
-        <h3>{{post.post_name}}, {{post.user.username}}{{post.current_date}}</h3>
-    </div>
-    <div>
-        <p>{{post.post_content}}</p>
+    <header class="card-header">
+        <p class="card-header-title">{{post.post_name}}, {{post.user.username}}{{post.current_date}}</p>
+    </header>
+    <div class="card-content">
+        <div class="content">
+            <p>{{post.post_content}}</p> 
+        </div>
     </div>
 </div>
 {{/each}}
