--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,7 +7,7 @@
 {{#each posts as |post|}}
   <div class = "card">
     <header class="card-header">
-      <p class="card-header-title">{{post.post_name}}{{post.current_date}}</p>
+      <p class="card-header-title">{{post.post_name}}{{format_Date post.current_date}}</p>
     </header>
   </div>
 {{/each}}
