--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,7 +1,7 @@
   {{#each posts as |post|}}
   <div class='card'>
     <header class="card-header">
-        <p class="card-header-title">{{post.post_name}}, {{post.user.username}}{{post.current_date}}</p>
+        <p class="card-header-title">{{post.post_name}}, {{post.user.username}}{{format_Date post.current_date}}</p>
     </header>
     <div class="card-content">
         <p>{{post.post_content}}</p>
