--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-    <form class="box has-background-grey-light login-form">
+    <form class="box has-background-grey-light form login-form">
       <div class="field">
         <h2>Login</h2>
 
@@ -24,7 +24,7 @@
       </div>
     </form>
 
-    <form class="box has-background-grey-light signup-form">
+    <form class="box has-background-grey-light form signup-form">
       <div class="field">
         <h2>SignUp</h2>
       
